<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in"
    android:orientation="vertical"
    android:background="@drawable/backgroundimg"
    android:gravity="center">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ecoorgee" />

    <!-- Email Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"
            android:background="@drawable/edit_text_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:background="@drawable/edit_text_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/primaryColor"
        android:layout_margin="16dp"
        android:elevation="4dp" />

    <!-- Sign Up Link -->
    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryColor"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:onClick="onSignUpClick" />

</LinearLayout>