<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Main_interface">

        <!-- Soil Moisture Layout -->
        <LinearLayout
            android:id="@+id/waterLevelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/title_water_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water_level"
                android:textColor="@color/primaryDarkColor"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_margin="4dp"
                android:background="@drawable/border_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/wLevel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="100%"
                    android:textAlignment="center"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="45sp"
                    android:layout_margin="12sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/water_level_img"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_water_level"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Temperature Layout -->
        <LinearLayout
            android:id="@+id/AirtempLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/waterLevelLayout"
            app:layout_constraintStart_toStartOf="@id/waterLevelLayout"
            app:layout_constraintEnd_toEndOf="@id/waterLevelLayout">

            <TextView
                android:id="@+id/title_air_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Air_temp"
                android:textColor="@color/primaryDarkColor"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_margin="4dp"
                android:background="@drawable/border_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/aire_temp__"/>

                <TextView
                    android:id="@+id/aTemp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="26.7°C"
                    android:textAlignment="center"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="45sp"
                    android:layout_margin="12sp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Historique Layout -->
        <LinearLayout
            android:id="@+id/HistoriqueLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/AirtempLayout"
            app:layout_constraintStart_toStartOf="@id/AirtempLayout"
            app:layout_constraintEnd_toEndOf="@id/AirtempLayout"
            android:gravity="center">

            <TextView
                android:id="@+id/title_Historique_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/histo_title"
                android:textColor="@color/primaryDarkColor"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_margin="4dp"
                android:background="@drawable/border_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="View History"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/primaryDarkColor"
                    android:layout_margin="12sp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>